Make some progress
Signed-off-by: Nathan LeClaire <nathan.leclaire@gmail.com>

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -6,8 +6,7 @@ run apt-get update && \
 expose 2376 3376 22
 volume /var/lib/docker
 run touch /var/log/auth.log
-run echo "root:root" | chpasswd
-run sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+run mkdir -p /root/.ssh
 
 # SSH login fix. Otherwise user is kicked off after login
 run sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
