Fix up some issues with dind driver
Signed-off-by: Nathan LeClaire <nathan.leclaire@gmail.com>

--- a/image/Makefile
+++ b/image/Makefile
@@ -3,5 +3,8 @@ default: build
 build:
 	./make.sh
 
+clean:
+	docker rmi dindbase
+
 run:
 	docker run -d -P --privileged nathanleclaire/docker-machine-dind
